fix(badge): fixed the overflow problem of ribbon badge
fix #3063

--- a/src/badge/badge.less
+++ b/src/badge/badge.less
@@ -19,8 +19,8 @@
 
 .@{prefix}-badge {
   position: relative;
-  display: inline-block;
-  vertical-align: top;
+  display: inline-flex;
+  align-items: start;
 
   &--basic {
     z-index: 100;
@@ -55,6 +55,7 @@
   &__ribbon {
     &-outer {
       position: absolute;
+      overflow: hidden;
       top: 0;
       right: 0;
     }
@@ -63,9 +64,9 @@
     &--after {
       content: '';
       position: absolute;
+      bottom: 0;
       width: 0;
       height: 0;
-      bottom: 0;
       border-bottom: @badge-basic-height solid @badge-color;
     }
 
@@ -82,8 +83,7 @@
 
   &--ribbon {
     display: inline-block;
-    transform: rotate(45deg);
-    transform-origin: center center;
+    transform-origin: top left;
     border-radius: 0;
     // padding: 0;
   }
